# python-pnote

./: .gitignore  .ruff.toml  MANIFEST.in  Makefile  README.md  midi_to_pnote.py  mypy.ini  pyproject.toml  specification.md
.cursor/rules/: repository.mdc
mid/: silent-night.mid
pnote/: __init__.py  __main__.py  cli.py  models.py
tests/: test_cli.py  test_control_event.py  test_event.py  test_note_event.py  test_pnote.py
