[project]
name = "pnote"
version = "0.1.0"
description = "Internal library for PNote LLM MIDI Notation System"
authors = [ { name = "PIVODIO", email = "y2@pivodio.com" } ]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "mido==1.3.3",
]

[project.urls]
Repository = "https://github.com/PIVODIO-Inc/python-pnote"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pnote*"]
